src/tests/evaluation_error/division_by_zero_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__division_by_zero_integer_infix_expression__test_division_by_zero_integer_infix_expression_case_2_lexical_analysis.snap
---
source: src/tests/evaluation_error/division_by_zero_integer_infix_expression/mod.rs
expression: tokens
---
[
    Integer {
        literal: 0,
    },
    Divide,
    Integer {
        literal: 0,
    },
]
