src/tests/evaluation_error/division_by_zero_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__division_by_zero_integer_infix_expression__test_division_by_zero_integer_infix_expression_case_3_syntax_analysis.snap
---
source: src/tests/evaluation_error/division_by_zero_integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: MinusPrefix {
                right_hand: Integer {
                    literal: 5,
                },
            },
            operator: Divide,
            right_hand: Integer {
                literal: 0,
            },
        },
    },
]
