src/tests/evaluation_error/division_by_zero_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__division_by_zero_integer_infix_expression__test_division_by_zero_integer_infix_expression_case_4_lexical_analysis.snap
---
source: src/tests/evaluation_error/division_by_zero_integer_infix_expression/mod.rs
expression: tokens
---
[
    Integer {
        literal: 10,
    },
    Divide,
    OpeningRoundBracket,
    Integer {
        literal: 5,
    },
    Minus,
    Integer {
        literal: 5,
    },
    ClosingRoundBracket,
]
