src/tests/evaluation_error/division_by_zero_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__division_by_zero_integer_infix_expression__test_division_by_zero_integer_infix_expression_case_5_lexical_analysis.snap
---
source: src/tests/evaluation_error/division_by_zero_integer_infix_expression/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "denominator",
    },
    Assign,
    Integer {
        literal: 0,
    },
    SemiColon,
    Integer {
        literal: 100,
    },
    Divide,
    Identifier {
        literal: "denominator",
    },
    SemiColon,
]
