src/tests/evaluation_error/division_by_zero_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__division_by_zero_integer_infix_expression__test_division_by_zero_integer_infix_expression_case_5_syntax_analysis.snap
---
source: src/tests/evaluation_error/division_by_zero_integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "denominator",
            expression: Integer {
                literal: 0,
            },
        },
    },
    Expression {
        expression: Infix {
            left_hand: Integer {
                literal: 100,
            },
            operator: Divide,
            right_hand: Identifier {
                identifier: "denominator",
            },
        },
    },
]
